--- a/CustomAI.yaml
+++ b/CustomAI.yaml
@@ -6,3 +6,5 @@ payload:
   - DOMAIN-SUFFIX,ip125.com
   - DOMAIN-SUFFIX,openai.com
   - DOMAIN-SUFFIX,chatgpt.com
+  - DOMAIN-SUFFIX,google.com
+  - DOMAIN-SUFFIX,googleapis.com
