--- a/CustomAI.yaml
+++ b/CustomAI.yaml
@@ -6,5 +6,6 @@ payload:
   - DOMAIN-SUFFIX,ip125.com
   - DOMAIN-SUFFIX,openai.com
   - DOMAIN-SUFFIX,chatgpt.com
+  - DOMAIN-SUFFIX,binance.com
 #  - DOMAIN-SUFFIX,google.com
 #  - DOMAIN-SUFFIX,googleapis.com
