--- a/CustomAI.yaml
+++ b/CustomAI.yaml
@@ -6,6 +6,7 @@ payload:
   - DOMAIN-SUFFIX,ip125.com
   - DOMAIN-SUFFIX,openai.com
   - DOMAIN-SUFFIX,chatgpt.com
+  - DOMAIN-SUFFIX,incolumitas.com
 #  - DOMAIN-SUFFIX,binance.com
 #  - DOMAIN-SUFFIX,google.com
 #  - DOMAIN-SUFFIX,googleapis.com
