--- a/CustomAI.yaml
+++ b/CustomAI.yaml
@@ -7,6 +7,7 @@ payload:
   - DOMAIN-SUFFIX,openai.com
   - DOMAIN-SUFFIX,chatgpt.com
   - DOMAIN-SUFFIX,incolumitas.com
+  - DOMAIN-SUFFIX,steampowered.com
 #  - DOMAIN-SUFFIX,binance.com
 #  - DOMAIN-SUFFIX,google.com
 #  - DOMAIN-SUFFIX,googleapis.com
