--- a/CustomAI.yaml
+++ b/CustomAI.yaml
@@ -8,6 +8,7 @@ payload:
   - DOMAIN-SUFFIX,chatgpt.com
   - DOMAIN-SUFFIX,incolumitas.com
   - DOMAIN-SUFFIX,steampowered.com
+  - DOMAIN-SUFFIX,grok.com
 #  - DOMAIN-SUFFIX,binance.com
 #  - DOMAIN-SUFFIX,google.com
 #  - DOMAIN-SUFFIX,googleapis.com
