--- a/CustomAI.yaml
+++ b/CustomAI.yaml
@@ -9,6 +9,7 @@ payload:
   - DOMAIN-SUFFIX,incolumitas.com
   - DOMAIN-SUFFIX,steampowered.com
   - DOMAIN-SUFFIX,grok.com
+  - DOMAIN-SUFFIX,poe.com
 #  - DOMAIN-SUFFIX,binance.com
 #  - DOMAIN-SUFFIX,google.com
 #  - DOMAIN-SUFFIX,googleapis.com
