--- a/CustomAI.yaml
+++ b/CustomAI.yaml
@@ -10,6 +10,7 @@ payload:
   - DOMAIN-SUFFIX,steampowered.com
   - DOMAIN-SUFFIX,grok.com
   - DOMAIN-SUFFIX,poe.com
+  - DOMAIN-SUFFIX,gemini.google.com
 #  - DOMAIN-SUFFIX,binance.com
 #  - DOMAIN-SUFFIX,google.com
 #  - DOMAIN-SUFFIX,googleapis.com
