--- a/CustomChain.yaml
+++ b/CustomChain.yaml
@@ -6,6 +6,7 @@ payload:
   - DOMAIN-SUFFIX,chatgpt.com
   - DOMAIN-SUFFIX,anthropic.com
   - DOMAIN-SUFFIX,claude.ai
+  - DOMAIN,gemini.google.com
   # > klaviyo
   #- DOMAIN-SUFFIX,klaviyo.com  
   - DOMAIN-SUFFIX,tiktok.com  
