--- a/CustomChain.yaml
+++ b/CustomChain.yaml
@@ -6,6 +6,7 @@ payload:
   - DOMAIN-SUFFIX,chatgpt.com
   - DOMAIN-SUFFIX,anthropic.com
   - DOMAIN-SUFFIX,claude.ai
+  - DOMAIN-SUFFIX,claude.com
   - DOMAIN-SUFFIX,google.com,no-resolve
   # > klaviyo
   #- DOMAIN-SUFFIX,klaviyo.com  
